--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
     font-family: Arial, sans-serif;
+    border: 0;
+    margin: 0;
 }
 
 .header {
@@ -24,5 +26,39 @@
 .body2 {
     background-color: white;
     color: #1f2937;
+}
+
+div#b2header {
     justify-content: center;
+}
+
+button#button1 {
+    background-color: #3882F6;
+    color: white;
+    border: 3px solid;
+    border-radius: 5px;
+    border-color: #3882F6;
+}
+
+button#button1:hover {
+    cursor: pointer;
+}
+button#button1:active {
+    transform: scale(0.97);
+    box-shadow: 1px 1px 3px black;
+}
+.body4{
+    margin: 50px;
+}
+
+div#CallToAction {
+    background-color: #3882F6;
+    color: white;
+    padding: 25px;
+    border-radius: 5px;
+    display: flex;
+}
+
+button#b4button {
+    justify-self: flex-end;
 }
