--- a/style.css
+++ b/style.css
@@ -7,33 +7,68 @@
     background-color: #1f2937;
     color: white;
     padding: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 a {
     color: white;
 }
 .header-links {
-    display: flex;
-    justify-content: flex-end;
+    /* justify-self: flex-end; */
+    padding: 5px 10px;
 }
 .header-logo {
-    display: flex;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
+    margin: 10px 50px;
+}
+#seatown-logo {
+    height: 75px;
+    width: 75px;
+    border: 5px solid #3882F6;
+    border-radius: 90px;
 }
 .body1 {
     background-color: #1f2937;
     color: white;
-    padding: 10px;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
 }
 .body2 {
     background-color: white;
     color: #1f2937;
-}
-div#b2header {
+    display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
-li {
+h3#b2header {
+ padding: 25px;
+}
+#b2l {
     display: flex;
     flex-direction: row;
+}
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+}
+li {
+    margin: 40px;
+    padding-bottom: 80px;
+}
+li > p {
+    width: 150px;
+    text-align: center;
+}
+li > img {
+    object-fit: cover;
+    height: 100%;
+    width: 150px;
+    border-radius: 10px;
+    border: 5px solid #1f2937;
+    /* padding: 5px; */
 }
 button#button1 {
     background-color: #3882F6;
@@ -59,10 +94,11 @@ button#button1:active {
     flex-direction: column;
 }
 #quote {
-    justify-self: right;
+    justify-self: end;
 }
 #author-book {
     font-weight: 700;
+    align-self: flex-end;
 }
 .body4{
     margin: 50px;
